updated sponsor logos made sponsor section responsive fixed alignment and added donate qr-code

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -487,8 +487,7 @@ nav ul li a {
 .about {
     display: flex;
     background-color: #f5f7fa;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    margin-bottom: 5%;
 }
 
 span {
@@ -1041,14 +1040,10 @@ body {
 
 .sponsor-heading {
     text-align: center;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.sponsor-heading h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 4vw;
+    margin-bottom: 5%;
 }
 
 .sponsor-logo-div {
@@ -1060,20 +1055,30 @@ body {
     display: flex;
     flex: 100%;
     justify-content: space-between;
-    padding: 0 8%;
+    padding: 0% 5%;
+}
+
+.logo-col5 {
+    vertical-align: middle;
 }
 
 .sponsor-logo-row2 {
     display: flex;
     flex: 100%;
     justify-content: space-between;
-    padding: 5% 8%;
+    padding: 5% 5%;
+}
+
+.sponsor-logo-row2 img {
+    max-width: 100%;
+    height: 60%;
+    width: 18vw;
 }
 
 .sponsor-logo-div img {
     cursor: pointer;
     max-width: 100%;
-    width: 20vw;
+    width: 22vw;
 }
 
 .sponsor-logo-div img:hover {
@@ -1081,22 +1086,53 @@ body {
     transform: scale(1.1) rotate(0.001deg);
 }
 
-.images-row {
-    margin-top: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px;
-    justify-content: center;
+@media screen and (max-width: 768px) {
+    .sponsor-heading {
+        font-size: 8vw;
+    }
+    .sponsor-logo-row1 {
+        flex: 25%;
+        max-width: 45%;
+        flex-direction: column;
+        margin-right: 5%;
+    }
+    .sponsor-logo-div img {
+        width: 35vw;
+        margin: 30px;
+    }
+    .sponsor-logo-row2 {
+        flex: 40%;
+        max-width: 40%;
+        flex-direction: column;
+        padding: 0;
+    }
+    .sponsor-logo-row2 img {
+        height: 40%;
+        padding-bottom: 8%;
+    }
+    .logo-col5 {
+        padding-bottom: 20%;
+    }
 }
 
-.images-column {
-    flex: 15%;
-    max-width: 30%;
-    padding: 10px;
+.glimpses {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 4vw;
+    margin-bottom: 5%;
 }
 
-.images-column img {
-    margin-top: 8px;
+.images-box {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 90%;
+    gap: 1em;
+    margin: auto;
+    padding-bottom: 5%;
+}
+
+.images-box img {
     width: 100%;
 }
 
@@ -1105,15 +1141,31 @@ body {
 }
 
 #border1 {
-    border-bottom-left-radius: 10%;
+    border-top-right-radius: 10%;
 }
 
 #border2 {
-    border-top-right-radius: 10%;
+    border-bottom-left-radius: 10%;
 }
 
 #border3 {
     border-bottom-right-radius: 10%;
+}
+
+@media screen and (max-width: 768px) {
+    .glimpses {
+        font-size: 6vw;
+    }
+    .images-box {
+        grid-template-columns: repeat(2, auto);
+        width: 90%;
+    }
+    #border,
+    #border1,
+    #border2,
+    #border3 {
+        border-radius: 0%;
+    }
 }
 
 
@@ -1333,3 +1385,22 @@ body {
             flex-direction: column;
         }
     }*/
+
+.qr-code {
+    display: flex;
+}
+
+.qr-code img {
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+    width: 40%;
+    height: 40%;
+}
+
+@media screen and (max-width: 1366px) {
+    .qr-code img {
+        width: 100%;
+        height: 100%;
+    }
+}
